--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,7 +710,7 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-rJBn3T8pcH {
-  background-image: url("../../../assets/images/banner3-sharp-1299x626.jpg");
+  background-image: url("../../../assets/images/banner3-sharp-1299x6261.jpg");
 }
 .cid-rJBn3T8pcH P {
   color: #767676;
@@ -789,6 +789,10 @@ section.lazy-placeholder:after {
 }
 .cid-rJMQMgT5Bj .card-wrapper {
   height: 100%;
+}
+.cid-rJMQMgT5Bj P {
+  color: #232323;
+  text-align: left;
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -2849,142 +2853,101 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rJMRfsAJG1 {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #ffffff;
+.cid-rJMYajq2VA {
+  padding-top: 120px;
+  padding-bottom: 30px;
+  background-color: #efefef;
 }
-.cid-rJMRfsAJG1 .images-container.container-fluid {
-  padding: 0;
+.cid-rJMYajq2VA .mbr-section-subtitle {
+  color: #767676;
 }
-.cid-rJMRfsAJG1 .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+.cid-rJMUuOAGmb {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #efefef;
 }
-.cid-rJMRfsAJG1 .media-container-row .img-item {
+.cid-rJMUuOAGmb .mbr-section-subtitle,
+.cid-rJMUuOAGmb .mbr-text {
+  color: #767676;
+}
+.cid-rJMUuOAGmb .card {
   display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
   position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
+  justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-rJMRfsAJG1 .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
+.cid-rJMUuOAGmb .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
 }
-.cid-rJMRfsAJG1 .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
+.cid-rJMUuOAGmb .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
 }
-.cid-rJMRfsAJG1 .media-container-row .img-item .img-caption p {
-  margin-bottom: 0;
-}
-.cid-rJMRfsAJG1 .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
-}
-@media (max-width: 992px) {
-  .cid-rJMRfsAJG1 .img-item {
-    width: 100% !important;
-  }
-  .cid-rJMRfsAJG1 .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
-}
-.cid-rJMTAXQY4h {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rJMUuOAGmb .card-wrapper .card-img .mbr-overlay {
   background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
 }
-.cid-rJMTAXQY4h .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rJMTAXQY4h .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-rJMTAXQY4h .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+.cid-rJMUuOAGmb .card-wrapper .card-img .mbr-section-btn {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-rJMTAXQY4h .card-front {
-  z-index: 2;
-  padding: 0;
+  transition: opacity .3s;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
 }
-.cid-rJMTAXQY4h .card-front img {
-  height: 100%;
-  min-width: 100%;
-  width: auto;
-}
-.cid-rJMTAXQY4h .card_back {
+.cid-rJMUuOAGmb .card-wrapper .card-img img {
   width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
 }
-.cid-rJMTAXQY4h .card {
-  min-height: 300px;
+.cid-rJMUuOAGmb .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
-.cid-rJMTAXQY4h .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+.cid-rJMUuOAGmb .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
 }
-.cid-rJMTAXQY4h .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
+.cid-rJMUuOAGmb .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
 }
-.cid-rJMTAXQY4h .builderCard .card_back {
-  border-bottom-left-radius: 100px;
+.cid-rJMUuOAGmb .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
 }
-.cid-rJMTAXQY4h .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
+.cid-rJMUuOAGmb .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rJMUuOAGmb .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-rJMUuOAGmb .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rJMUuOAGmb .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-rJMUuOAGmb .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rJMUuOAGmb .mbr-section-subtitle {
+  text-align: left;
+}
+.cid-rJMUuOAGmb .mbr-section-title {
+  text-align: left;
 }
