--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2873,7 +2873,7 @@ section.lazy-placeholder:after {
 }
 .cid-rJMYajq2VA {
   padding-top: 120px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #efefef;
 }
 .cid-rJMYajq2VA .mbr-section-subtitle {
@@ -2881,7 +2881,7 @@ section.lazy-placeholder:after {
 }
 .cid-rJMUuOAGmb {
   padding-top: 0px;
-  padding-bottom: 90px;
+  padding-bottom: 30px;
   background-color: #efefef;
 }
 .cid-rJMUuOAGmb .mbr-section-subtitle,
@@ -2965,6 +2965,7 @@ section.lazy-placeholder:after {
 }
 .cid-rJMUuOAGmb .mbr-section-subtitle {
   text-align: left;
+  color: #232323;
 }
 .cid-rJMUuOAGmb .mbr-section-title {
   text-align: left;
