small updates. Missing animated gif with new smaller video.

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,6 +710,8 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-rJBn3T8pcH {
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-image: url("../../../assets/images/banner3-sharp-1299x626.jpg");
 }
 .cid-rJBn3T8pcH P {
