--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -727,10 +727,10 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 .cid-rJBn3T8pcH H3 {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rJBn3T8pcH DIV {
-  text-align: center;
+  text-align: left;
 }
 .cid-rJNkonYHDL {
   padding-top: 30px;
